--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.0.4",
+    "electron": "^19.0.8",
+    "electron-reload": "^2.0.0-alpha.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  }
 }
