--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "electron": "^19.0.8",
     "electron-reload": "^2.0.0-alpha.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
