--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "css-loader": "^6.7.1",
     "electron": "^19.0.8",
     "electron-reload": "^2.0.0-alpha.1",
+    "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "react": "^18.2.0",
