--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "css-loader": "^6.7.1",
     "electron": "^19.0.8",
     "electron-reload": "^2.0.0-alpha.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
